@@ -271,13 +271,14 @@ grestore
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; output signatures.
+
 (define-public (write-system-signatures basename paper-systems count)
   (if (pair? paper-systems)
       (begin
 	(let*
 	    ((outname (format "~a-~a.signature" basename count)) )
 	     
-	  (ly:message "writing ~a" outname)
+	  (ly:message "Writing ~a" outname)
 	  (write-system-signature outname (car paper-systems))
 	  (write-system-signatures basename (cdr paper-systems) (1+ count))))))
 
@@ -376,8 +377,11 @@ grestore
 
     (interpret expr))
 
-  (display (format "# Output signature\n# Generated by LilyPond ~a\n" (lilypond-version))
-	   output)
-  (interpret-for-signature found-grob (lambda (x) #f)
-			   (ly:stencil-expr
-			    (paper-system-stencil paper-system))))
+  (if (ly:grob? system-grob)
+      (begin
+	(display (format "# Output signature\n# Generated by LilyPond ~a\n" (lilypond-version))
+		 output)
+	(interpret-for-signature found-grob (lambda (x) #f)
+				 (ly:stencil-expr
+				  (paper-system-stencil paper-system)))))
+  
